--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Vendor CSS Files -->
   <link href="bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="glightbox.min.css" rel="stylesheet">
   <link href="swiper-bundle.min.css" rel="stylesheet">
 
@@ -591,7 +591,7 @@
   <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
