--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">NEWS Website</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Core PHP</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Core PHP</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
