--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Services
+                My Skills
               </h3>
               <p class="subtitle-a">
                 
